--- a/frontend-vite/index.html
+++ b/frontend-vite/index.html
@@ -70,7 +70,7 @@
       }
       
       /* شاشة التحميل */
-      .otogram-loader {
+       #otogram-loader {
         position: fixed;
         top: 0;
         left: 0;
@@ -317,7 +317,7 @@
   </head>
   <body>
     <!-- شاشة التحميل -->
-    <div class="otogram-loader">
+    <div id="otogram-loader">
       <!-- خلفية متحركة -->
       <div class="loader-background">
         <div class="loader-orb orb-1"></div>
