--- a/frontend-vite/index.html
+++ b/frontend-vite/index.html
@@ -12,11 +12,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Otogram - شارك لحظاتك مع العالم" />
     
-    <!-- تحميل الخط بشكل async -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-    
+ <!-- ✅ تحميل الخط بشكل صحيح -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&display=swap" rel="stylesheet">
     <!-- منع وميض الشاشة عند تحميل الثيم -->
     <script>
       (function() {
